--- a/Restaurant Ordering System/public_html/Employee/employee_main.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_main.html
@@ -18,7 +18,7 @@
 
     <div class="space-x-4">
       <a href="employee_menu.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">View Menu</a>
-      <a href="orders.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">View Orders</a>
+      <a href="employee_order.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">View Orders</a>
     </div>
   </main>
 
