--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -113,7 +113,45 @@
         window.location.href = 'customer_main.html';
       }
     }
+async function loadMenu() {
+  try {
+    const response = await fetch('/Customer/menu/');
+    const data = await response.json();
+    const menuList = document.getElementById('menuList');
+    menuList.innerHTML = '';
 
+    if (data.success && data.items.length > 0) {
+      data.items.forEach(item => {
+        const card = document.createElement('div');
+        card.className = "bg-white shadow rounded-lg p-4 flex flex-col justify-between";
+        card.innerHTML = `
+          <div>
+            <h3 class="text-lg font-bold text-gray-800">${item.item_name}</h3>
+            <p class="text-sm text-gray-600 mt-1">${item.description || ''}</p>
+            <p class="font-semibold mt-2 text-green-700">$${parseFloat(item.price).toFixed(2)}</p>
+          </div>
+          <p class="text-xs text-gray-400 mt-2">${item.category || ''}</p>
+          <button 
+            class="mt-3 bg-green-600 hover:bg-green-700 text-white py-1 px-3 rounded transition"
+            data-add-to-cart
+            data-id="${item.item_id}"
+            data-name="${item.item_name}"
+            data-price="${item.price}">
+            Add to Cart
+          </button>
+        `;
+        menuList.appendChild(card);
+      });
+    } else {
+      menuList.innerHTML = '<p class="text-gray-500">No menu items available right now.</p>';
+    }
+  } catch (err) {
+    console.error('Failed to load menu:', err);
+  }
+}
+document.addEventListener('DOMContentLoaded', loadMenu);
+
+ 
     document.addEventListener('DOMContentLoaded', () => {
       document.querySelectorAll('[data-add-to-cart]').forEach(btn => {
         btn.addEventListener('click', () => {
